--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 .header-container{
     margin-top: 2%;
+    
 }
 .logo{
     width: 150px;
@@ -20,4 +21,11 @@
 }
 .btn:hover{
     background-color: lightgray;
+}
+
+.banner-detail p{
+    width: 500px;
+    letter-spacing: 1.5px;
+    color: rgb(233, 147, 18);
+    padding: 20px 0;
 }
