--- a/style/style.css
+++ b/style/style.css
@@ -29,3 +29,40 @@
     color: rgb(233, 147, 18);
     padding: 20px 0;
 }
+.banner-section{
+    padding-bottom: 30px;
+}
+
+.title{
+    justify-content: space-between;
+    padding-bottom: 20px;
+}
+.title h4{
+    font-weight: 700;
+
+}
+.title h5{
+    color: rgb(233, 147, 18);
+}
+.card-img-top{
+    width: 70%;
+}
+.card{
+    padding: 30px 0;
+    border: none;
+    box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.1);
+}
+.card-title{
+    font-weight: 700;
+    font-size: 22px;
+}
+.card-text{
+    color: gray;
+}
+.price{
+    font-weight: bold;
+    font-size: 20px;
+}
+.phone-section{
+    padding-bottom: 50px;
+}
