--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 .header-container{
     margin-top: 2%;
-    
+    box-shadow:0px 10px 40px rgb(241, 241, 241);
 }
 .logo{
     width: 150px;
@@ -33,9 +33,7 @@
     padding-bottom: 30px;
    
 }
-.style{
-    box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.1);
-}
+
 .title{
     justify-content: space-between;
     padding-bottom: 20px;
